--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     body {
       background-color: #FFFFFF;
       font-family: Arial, Helvetica, sans-serif;
+      background-image: url("bg.png");
+      background-size: 99%;
+      background-attachmnt: fixed;
     }
     
     .spacer{
