--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     color: rgb(92, 255, 51);
     padding: 8px 10px;
     text-align: center;
-    font-size: 20px;
+    font-size: 14px;
+    font-weight: 400;
     width: 100%;
     display: block;
   		}
@@ -139,8 +140,8 @@
     </div>
     <div class="spacer"></div>
   <div class="main">
-    <div class="leftSide">
-      
+    <div class="leftSide"><br><br>
+      <img src="limboLogo_black.png" alt="black and white abstract, stretched and manipulated, word LIMBO in all caps" style="height:45px;"><br><br>
       <button class="button">CLICK TO ENTER SCREENING ROOM </button>
     <br>
       		Students of School of the Art Insitute of Chicago's Writing for Film, Video, and Performance are pleased to present Expiration Date. Through experimental filmmaking, sound, and animation, this online screening explores the ups and downs of mental health, the beauty and horrors of dreamscapes, the lives of fictional characters, and the cycles of life and death.<br><br>
