--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
       background-color: #FFFFFF;
       font-family: Arial, Helvetica, sans-serif;
       background-image: url("bg.png");
-      background-size: 100%;
+      background-size: 1020p;
       background-attachmnt: fixed;
-      background-repeat: none;
+      background-repeat: no-repeat;
+    
     }
     
     .spacer{
