--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 	<head>
       <meta charset="utf-8">
-      <title>LIMBO</title>
+      <title>LIMBO? AN EXPIRATION DATE!</title>
   <style>
     body {
       background-color: #FFFFFF;
@@ -146,7 +146,7 @@
       <img src="limboLogo_black.png" alt="black and white abstract, stretched and manipulated, word LIMBO in all caps" style="height:45px;"><br><br>
       <button class="button">CLICK TO ENTER SCREENING ROOM </button>
     <br>
-     Students of School of the Art Institute of Chicago's Writing for Film, Video, and Performance are pleased to present LIMBO? AN EXPIRATION DATE!, an online streaming event of unique visions that moves and explores on the edge, pushing the boundaries of image making to their invisible borders and reaches beyond. Contemplations of mental health, the beauty and horrors of dreamscapes, constructions of narrative filmmaking, and the cycles of life and death and what lies in-between. 
+      Students of School of the Art Institute of Chicago's Writing for Film, Video, and Performance are pleased to present <i>LIMBO? AN EXPIRATION DATE!</i>, an online streaming event of unique visions that moves and explores on the edge, pushing the boundaries of image making to their invisible borders and reaches beyond. Contemplations of mental health, the beauty and horrors of dreamscapes, constructions of narrative filmmaking, and the cycles of life and death and what lies in-between. 
 
 
     </div>
