try this script but prob not

--- a/index.html
+++ b/index.html
@@ -183,5 +183,11 @@
    <p style="  animation: floatText 55s infinite linear;
      white-space: wrap;">PREMIERE  = DECEMBER 15TH @@ 5:30PM CENTRAL TIME. &lt;&lt;&lt;&lt; PREMIERE  = DECEMBER 15TH @@ 5:30PM CENTRAL</p>
 </div>
+    
+    <script type="text/javascript">
+  if (screen.width <= 699) {
+    document.location = "https://www.youtube.com/watch?v=h60JluYWj6c";
+  }
+</script>
 	</body>
 </html>
