no marquee title

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
     </div>
     <div class="rightSide">
-      <b><h3><marquee>. ABOUT THE ARTISTS</h3></marquee></b><br><br>
+      <b><h3> ABOUT THE ARTISTS</h3></b><br><br>
     
           Hongjin Chen &rarr;
           Khanh Mai Doan &rarr;
