--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
       <br><br><img src="LH_still.jpg" alt="illustration of a face - nose and eyes staring straight ahead" style="height:47.5%;">
       <h3>Lam Son Hoang</h3> <br>Lam Hoang was born and raised in Vietnam and he is currently studying in Chicago, USA. He started his film and animation journey in 2018 and going to graduate in 2022. His project is characterized by the use of story, emotion, and internal reflections, presented in high contrast theme. He also enjoys street and travel photography as a means of finding beauty in the mundane.<br>
       
-      <br><br>
+      <br><img src="Pg_still.jpg" alt="black and white image of a person, blurred" style="height:46%;"><br>
       <h3>Philipp Groth</h3><br>Filmmaker and visual artist working between Chicago and Berlin. After studies at the University of the Arts London, “acte tm” was founded as his studio residence in Berlin, where he also teaches Film Production and Film Directing as a visiting lecturer at the Design Academy. In 2021, he was the recipient of the Dean Professional Development Award from The School of the Art Insitute of Chicago. In his practice he combines the form of narrative techniques and documentary with a spacial experience into imaginary journeys. In his film and sculpture work he is particularly interested in what it means to be a character and what it means to have a story.
 <br>
       
