--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
       <br><br>
           <h3>Zihan Qiu</h3> <br><br>
       
-      <br><br>
+      <br><br><img src="filename.jpg" alt="description of image">
       <h3>Mo Gyeong Seong</h3><br>Mo Gyeong Seong was born. He continues to live with delusions of grandeur. <br>
       
       <br><br>
