--- a/index.html
+++ b/index.html
@@ -325,7 +325,9 @@
       <h3 id="A1">Meadow Meyer</h3><br>Meadow Meyer is an undergraduate at SAIC  studying to get their BFAW. They use all pronouns. Meadow is a lesbian, Pisces, writer, actor, drag king and artist. She loves her cat Pixie and dancing!<br>
  <br><hr class="rounded"><br>   
       
-      <h3>Jake Phillips</h3> <br>
+      <img src="jp_still.JPG" alt="two blonde humans, in eachother's arms">
+      <h3>Jake Phillips</h3>
+      If being trans were a choice, there would be no trans people.<br>
       <hr class="rounded"><br>     
       <br>
      
